--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "jsx plugin for kraken-devtools",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run jscs && npm run lint",
+    "jscs": "./node_modules/.bin/jscs index.js",
+    "lint": "jshint --config=.jshintrc --exclude='node_modules' index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,9 @@
   "homepage": "https://github.com/samsel/kraken-devtools-jsx",
   "dependencies": {
     "react-tools": "^0.12.2"
+  },
+  "devDependencies": {
+    "jscs": "^1.9.0",
+    "jshint": "^2.5.11"
   }
 }
