add tests for the plugin

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,6 @@
 {
 	"excludeFiles": ["node_modules/**"],
 	"preset": "airbnb",
-	"validateIndentation": "\t",
+	"validateIndentation": 2,
 	"requireMultipleVarDecl": null
 }
