--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "kraken-devtools-jsx",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "jsx plugin for kraken-devtools",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "npm run jscs && npm run lint",
-    "jscs": "./node_modules/.bin/jscs index.js",
-    "lint": "jshint --config=.jshintrc --exclude='node_modules' index.js"
+    "test": "npm run jscs && npm run lint && npm run mocha",
+    "jscs": "./node_modules/.bin/jscs **/*.js",
+    "lint": "jshint --config=.jshintrc --exclude='node_modules' **/*.js",
+    "mocha": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,12 @@
     "react-tools": "^0.12.2"
   },
   "devDependencies": {
+    "express": "^4.10.6",
     "jscs": "^1.9.0",
-    "jshint": "^2.5.11"
+    "jshint": "^2.5.11",
+    "kraken-devtools": "^1.0.0",
+    "mocha": "^2.1.0",
+    "rimraf": "^2.2.8",
+    "supertest": "^0.15.0"
   }
 }
